<package>
  <name>crazyflie_fly</name>
  <version>0.0.1</version>
  <description>

     See README.md

  </description>
  <author>Matt Broussard</author>
  <author>Robert Lynch</author>
  <maintainer email="mattb@cs.utexas.edu">Matt Broussard</maintainer>
  <maintainer email="rmlynch@cs.utexas.edu">Robert Lynch</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
